<resources>
    <string name="app_name">Nhà sách phương nam</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="remember_password">Nhớ mật khẩu?</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="toast_wrong_password">Sai tên đăng nhập hoặc mật khẩu</string>
    <string name="btn_logout">Đăng xuất</string>
    <string name="btn_change_password">Đổi mật khẩu</string>
    <string name="btn_add_account">Thêm tài khoản</string>
    <string name="account_navitation">Tài khoản</string>
    <string name="selled_navigation">Sách đã bán</string>
    <string name="library">Thư viện</string>
    <string name="chart_navigation">Thống kê</string>
    <string name="tvform_UserName">Tên đăng nhập</string>
    <string name="btn_cancel">Hủy</string>
    <string name="btn_next">Tiếp</string>
    <string name="tv_FormName">Họ tên</string>
    <string name="error_not_empty">Không được bỏ trống</string>
    <string name="error_username_have_space">Không chứa khoảng trống</string>
    <string name="error_empty_5_chararcters">Ít nhất 5 kí tự</string>
    <string name="error_special_characters">Chỉ chứa A-z,0-9</string>
    <string name="tvLabel_add_account_name">Họ tên</string>
    <string name="btn_Pre">Trước</string>
    <string name="error_empty_10_chararcters">ít nhất 10 kí tự</string>
    <string name="tvLabel_add_account_phone">Số điện thoại</string>
    <string name="error_under_10_digits_phone">SĐT phải có 10 số</string>
    <string name="error_empty_phone_not_number">Không phải sđt</string>
    <string name="tvLabel_add_account_email">Email</string>
    <string name="error_is_email">Không đúng định dạng email</string>
    <string name="error_is_empty">Không được bỏ trống</string>
    <string name="tvLabel_add_account_address">Địa chỉ</string>
    <string name="edit_account">Sửa thông tin</string>
    <string name="update_to_admin">Thăng chức</string>
    <string name="selled_mem">Sách bán được</string>
    <string name="delete_account">Xóa tài khoản</string>
    <string name="password_add">Mật khẩu</string>
    <string name="error_password">Mật khẩu chỉ chứa a-z,0-9</string>
    <string name="error_password_not_matches">Mật khẩu không khớp</string>
    <string name="library_title">Thư viện</string>
    <string name="book_type_name">Tên loại sách</string>
    <string name="save">Lưu</string>
    <string name="loction">Vị trí</string>
    <string name="location">Vị trí</string>
    <string name="search">Tìm kiếm</string>
    <string name="add_book_type">Thêm loại sách</string>
    <string name="search_book_type_hint">Nhập tên loại sách cần tìm</string>
    <string name="bill">Hóa đơn</string>
    <string name="title_bill_frag">Hóa đơn</string>
    <string name="title_bill_detail">Hóa đơn chi tiết</string>
    <string name="top_ten_book_selling">Sách bán chạy</string>
    <string name="edit_user_name">Sửa Tên Đăng nhập</string>
    <string name="saved">Đã lưu</string>
    <string name="view_account">Xem chi tiết</string>
    <string name="confirm_delete">Bạn có chắc muốn xóa không</string>
    <string name="accept">Đồng ý</string>
    <string name="deleted">Đã xóa</string>
    <string name="delete">Xóa</string>
    <string name="edit">Sửa</string>
    <string name="view_detail">Xem chi tiết</string>
    <string name="book_name">Tên sách</string>
    <string name="count">Số lượng</string>
    <string name="author">Tác giả</string>
    <string name="price">Đơn giá</string>
    <string name="add_complete">Thêm thành công</string>
    <string name="staff">Nhân viên</string>
    <string name="customer">Khách hàng</string>
    <string name="time">Thời gian</string>
    <string name="bounded_count">Số lượng không hợp lệ</string>
    <string name="billOwner">Người tạo đơn</string>
    <string name="comfirm_logout">Bạn muốn đăng xuất?</string>
    <string name="password">Nhập mật khẩu</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="re_passwod">Nhập lại mật khẩu</string>
    <string name="toast_password">Sai mật khẩu</string>
    <string name="changed_password">Đã đổi mật khẩu</string>
    <string name="add_bill">Thêm hóa đơn</string>
</resources>
