<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/dialog_rounded"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_login_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="52dp"
            android:paddingRight="32dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipPassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipPassword"
        app:passwordToggleEnabled="true">

        <EditText
            android:hint="@string/new_password"
            android:id="@+id/edtPassword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_login_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="52dp"
            android:paddingRight="32dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipPassword1"
        app:passwordToggleEnabled="true">

        <EditText
            android:hint="@string/re_passwod"
            android:id="@+id/edtPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_login_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="52dp"
            android:paddingRight="32dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnPos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@color/transparent"
        android:text="@string/btn_next"
        android:textColor="@color/black_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipPassword2" />

    <Button
        android:id="@+id/btnNe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/transparent"
        android:text="@string/btn_cancel"
        android:textColor="@color/black_overlay"
        app:layout_constraintEnd_toStartOf="@+id/btnPos"
        app:layout_constraintTop_toBottomOf="@+id/tipPassword2" />
</androidx.constraintlayout.widget.ConstraintLayout>